# polymix-next-proto

./: .gitignore  CLAUDE.md  PLAN.md  README.md  justfile
.claude/skills/onboard-live-entity/: SKILL.md
.claude/skills/perf-check/: SKILL.md
.github/workflows/: ci.yml
backend/: .env.cloud.local.example  Cargo.toml  fly.toml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: auth.rs  backend.rs  config.rs  dev_issuer.rs  error.rs  jwks.rs  lib.rs  main.rs  price_model.rs  publisher.rs  quote_pricing.rs  state.rs
backend/crates/api/src/routes/: customers.rs  dev.rs  dictionaries.rs  estimate.rs  health.rs  invoices.rs  me.rs  mod.rs  orders.rs  pricing.rs  quotes.rs  search.rs
backend/crates/api/src/ws/: handler.rs  hub.rs
backend/crates/api/tests/: customers_crm.rs  orders_invoices.rs  pricing.rs  readiness.rs  search.rs  tenant_isolation.rs  ws.rs  ws_resilience.rs
backend/crates/api/tests/common/: mod.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: auth.rs  customer.rs  error.rs  invoice.rs  lib.rs  live.rs  money.rs  order.rs  pricing.rs  quote.rs  search.rs  tenant.rs
backend/crates/quote-engine/: Cargo.toml
backend/crates/quote-engine/fixtures/: demo.json  expected.json
backend/crates/quote-engine/src/: effect.rs  error.rs  lib.rs  model.rs  money.rs  price.rs  resolve.rs  rules.rs
backend/crates/quote-engine/tests/: engine.rs  golden.rs  no_float.rs
backend/crates/quote-engine/tests/common/: mod.rs
backend/crates/seeder/: Cargo.toml
backend/crates/seeder/src/: main.rs  ua.rs  uk.rs
backend/crates/surreal-store/: Cargo.toml
backend/crates/surreal-store/examples/: concurrency_probe.rs  perf_probe.rs
backend/crates/surreal-store/migrations/: 0001_init.surql  0002_customers.surql  0003_orders_invoices.surql  0004_search.surql  0005_exchange_rate.surql  0006_order_number_ngram.surql  0007_drop_unused_search_indexes.surql  0008_order_status_int.surql  0009_customers_crm.surql  0010_remove_customer_number.surql  0011_customer_version.surql  0012_pricing_catalog.surql  0013_quotes.surql
backend/crates/surreal-store/src/: common.rs  counter.rs  customer_repo.rs  exchange_rate.rs  invoice_repo.rs  lib.rs  live.rs  migrations.rs  order_repo.rs  pricing_repo.rs  provision.rs  quote_repo.rs  status.rs  store.rs  tenant_repo.rs
backend/crates/surreal-store/tests/: connect_retry.rs  live.rs
deploy/: Dockerfile.api  compose.rocksdb.yaml  compose.yaml  fly.surrealdb.toml
docs/: customers-crm.md  database-portability.md  design-screens.md  impersonation-design.md  instant-quote.md  order-production-design.md  perf.md  pg-store-plan.md  pricing-admin-plan.md  product-configuration.md  quote-engine-spec.md  quote-implementation-plan.md  rbac-design.md  staff-quoting.md  surrealdb-rust-sdk-notes.md
docs/adr/: 0001-surrealdb-fulltext-keyword.md  0002-surrealdb-session-clone-depth.md  0003-order-search-excludes-line-items.md  0004-search-p95-exceeds-target.md  0005-invoice-put-drafts-only.md  0006-tenant-session-cache-and-search-split.md  0007-m4-i18n-currency-org-settings-deviations.md  0008-live-stream-session-lifetime.md  0009-order-number-infix-search.md  0010-customer-number-shares-fts-tokens-with-low-counters.md  0010-frontend-hosting-vercel-instead-of-fly.md  0011-drop-customer-numbering.md  0011-surrealdb-hosting-cloud-free-tier-instead-of-fly.md  0012-postgres-store-experiment.md  0013-quote-engine-total-not-monotonic-across-margin-bands.md  0014-pricing-routes-gate-on-auth-pending-rbac.md  0015-production-plan-snapshots-onto-job.md
docs/design/: PolyMix Logo.dc.html
docs/examples/: drukomat-spiral-catalog.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: index.css  main.tsx  test-setup.ts
frontend/src/app/: App.test.tsx  AppShell.tsx  HomePage.tsx  routes.tsx
frontend/src/components/: ListLayout.tsx  ListPagination.tsx  PageHeader.tsx  StatusBadge.tsx
frontend/src/features/customers/: Activity.tsx  Detail.test.tsx  Detail.tsx  Form.test.tsx  Form.tsx  List.tsx  New.tsx  api.ts  types.ts  useCustomerStatusDictionary.ts
frontend/src/features/invoices/: Detail.tsx  Form.test.tsx  Form.tsx  List.tsx  api.ts  types.ts
frontend/src/features/orders/: CustomerSelect.tsx  Detail.test.tsx  Detail.tsx  Form.test.tsx  Form.tsx  List.module.css  List.tsx  New.tsx  api.ts  statusTone.test.ts  statusTone.ts  types.ts  useOrderStatusDictionary.ts
frontend/src/features/pricing/: CatalogList.tsx  Edit.tsx  FormatForm.tsx  MachineForm.tsx  MaterialForm.test.tsx  MaterialForm.tsx  MoneyMicroInput.tsx  New.tsx  OperationForm.tsx  PolicyForm.tsx  PricingForm.tsx  api.ts  registry.tsx  types.ts  usePricingForm.ts
frontend/src/lib/: table.test.ts  table.ts
reference/: katalog-spiralowany.html
scripts/: perf-search.sh
(+67 files in other folders)
