[package]
name = "api"
edition.workspace = true
version.workspace = true
publish.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
domain.workspace = true
surreal-store.workspace = true
axum = { workspace = true, features = ["ws"] }
futures.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
ulid.workspace = true
validator.workspace = true
async-trait.workspace = true
chrono.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rsa = "0.9"
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
testcontainers = "0.27"
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = "0.29"
