[package]
name = "domain"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
quote-engine.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ulid.workspace = true
chrono.workspace = true
async-trait.workspace = true
validator.workspace = true
