[package]
name = "seeder"
edition.workspace = true
version.workspace = true
publish.workspace = true

[[bin]]
name = "seeder"
path = "src/main.rs"

[dependencies]
domain.workspace = true
surreal-store.workspace = true
surrealdb.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true
chrono.workspace = true
rand = "0.8"
fake = "2.9"
