[package]
name = "surreal-store"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
domain.workspace = true
serde.workspace = true
serde_json.workspace = true
surrealdb.workspace = true
thiserror.workspace = true
ulid.workspace = true
chrono.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio = { workspace = true }
sha2 = "0.10"
hex = "0.4"
